# TestReport

./: .gitignore  README.md  main.py  pyproject.toml  reader.py  reports_registry.py  table.py
reports/: performance.py
tests/: test_main.py  test_performance.py  test_reader.py
