[project]
name = "testreport"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeniy Semin",email = "evgeniy.zhenia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
